// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> should render open popover withouth a problem 1`] = `
.c0 {
  position: relative;
  width: auto;
  padding: 1.8rem;
  border-radius: 0.4rem;
  box-shadow: 0 0.2rem 1.6rem 0 hsla(0,0%,0%,0.1),0 0.2rem 1.6rem 0 hsla(206,23%,69%,0.1), 0 0 0 0.1rem hsl(207,22%,90%);
  background: hsl(0,100%,100%);
}

.c0::before {
  content: "";
  display: block;
  position: absolute;
  top: -0.7rem;
  left: 50%;
  z-index: -1;
  height: 14.14px;
  width: 14.14px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
  background: white;
  box-shadow: -1px 1px 2px 0px rgba(0,0,0,0.2);
}

<Popover
  active={true}
  arrowPositionX="50%"
  width="auto"
>
  <PoseGroup
    flipMove={true}
  >
    <Transition
      enterAfterExit={false}
      enterPose="enter"
      exitPose="exit"
      flipMove={true}
      preEnterPose="exit"
    >
      <Component
        _pose="enter"
        arrowPositionX="50%"
        key="popover"
        width="auto"
      >
        <PoseElement
          _pose="enter"
          arrowPositionX="50%"
          elementType={[Function]}
          poseConfig={
            Object {
              "enter": Object {
                "opacity": 1,
                "transition": Object {
                  "default": Object {
                    "duration": 150,
                  },
                  "y": Object {
                    "damping": 30,
                    "stiffness": 900,
                    "type": "spring",
                  },
                },
                "y": 15,
              },
              "exit": Object {
                "opacity": 0,
                "transition": Object {
                  "duration": 150,
                },
                "y": 30,
              },
            }
          }
          width="auto"
        >
          <styled.div
            arrowPositionX="50%"
            hostRef={[Function]}
            innerRef={[Function]}
            width="auto"
          >
            <div
              className="c0"
              width="auto"
            >
              Children
            </div>
          </styled.div>
        </PoseElement>
      </Component>
    </Transition>
  </PoseGroup>
</Popover>
`;

exports[`<Popover /> should render with a different width 1`] = `
<Popover
  active={false}
  arrowPositionX="50%"
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "1.6rem",
          "bigInt": 1.6,
          "default": "1.2rem",
          "defaultInt": 1.2,
          "h1": "3.6rem",
          "h1Int": 3.6,
          "h2": "3rem",
          "h2Int": 3,
          "h3": "2.6rem",
          "h3Int": 2.6,
          "h4": "2.2rem",
          "h4Int": 2.2,
          "h5": "2.0rem",
          "h5Int": 2,
          "h6": "1.8rem",
          "h6Int": 1.8,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.4rem",
          "mediumInt": 1.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "avatar": Object {
          "alizarin": "hsl(6, 78%, 57%)",
          "carrot": "hsl(28, 80%, 52%)",
          "emerald": "hsl(145, 63%, 49%)",
          "river": "hsl(204, 70%, 53%)",
          "turquoise": "hsl(168, 76%, 42%)",
          "wisteria": "hsl(282, 44%, 47%)",
        },
        "black": "hsl(0, 0%, 0%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "darkBlue": "hsl(213, 17%, 20%)",
        "darkGrey": "hsl(206,16%,60%)",
        "failure": Object {
          "dark": "#e74432",
          "darker": "#e42f1b",
          "default": "hsl(6, 79%, 65%)",
        },
        "googleBrandRed": "hsl(5, 81%, 56%)",
        "lightGrey": "hsl(207,22%,90%)",
        "mediumGrey": "hsl(206,23%,69%)",
        "mysticGrey": "hsl(216,45%,98%)",
        "primary": Object {
          "dark": "#1873a0",
          "darker": "#14638a",
          "default": "hsl(200, 74%, 46%)",
        },
        "secondary": Object {
          "default": "hsl(0, 100%, 100%)",
        },
        "spaceGrey": "hsl(207,13%,45%)",
        "success": Object {
          "dark": "#6da333",
          "darker": "#60902d",
          "default": "hsl(89, 53%, 52%)",
        },
        "warning": Object {
          "dark": "#f59a24",
          "darker": "#f48f0b",
          "default": "hsl(34, 91%, 65%)",
        },
        "white": "hsl(0, 100%, 100%)",
        "whiteOpacity": [Function],
      },
    }
  }
  width="10rem"
>
  <PoseGroup
    flipMove={true}
  >
    <Transition
      enterAfterExit={false}
      enterPose="enter"
      exitPose="exit"
      flipMove={true}
      preEnterPose="exit"
    />
  </PoseGroup>
</Popover>
`;

exports[`<Popover /> should render withouth a problem 1`] = `
<Popover
  active={false}
  arrowPositionX="50%"
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "1.6rem",
          "bigInt": 1.6,
          "default": "1.2rem",
          "defaultInt": 1.2,
          "h1": "3.6rem",
          "h1Int": 3.6,
          "h2": "3rem",
          "h2Int": 3,
          "h3": "2.6rem",
          "h3Int": 2.6,
          "h4": "2.2rem",
          "h4Int": 2.2,
          "h5": "2.0rem",
          "h5Int": 2,
          "h6": "1.8rem",
          "h6Int": 1.8,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.4rem",
          "mediumInt": 1.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "avatar": Object {
          "alizarin": "hsl(6, 78%, 57%)",
          "carrot": "hsl(28, 80%, 52%)",
          "emerald": "hsl(145, 63%, 49%)",
          "river": "hsl(204, 70%, 53%)",
          "turquoise": "hsl(168, 76%, 42%)",
          "wisteria": "hsl(282, 44%, 47%)",
        },
        "black": "hsl(0, 0%, 0%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "darkBlue": "hsl(213, 17%, 20%)",
        "darkGrey": "hsl(206,16%,60%)",
        "failure": Object {
          "dark": "#e74432",
          "darker": "#e42f1b",
          "default": "hsl(6, 79%, 65%)",
        },
        "googleBrandRed": "hsl(5, 81%, 56%)",
        "lightGrey": "hsl(207,22%,90%)",
        "mediumGrey": "hsl(206,23%,69%)",
        "mysticGrey": "hsl(216,45%,98%)",
        "primary": Object {
          "dark": "#1873a0",
          "darker": "#14638a",
          "default": "hsl(200, 74%, 46%)",
        },
        "secondary": Object {
          "default": "hsl(0, 100%, 100%)",
        },
        "spaceGrey": "hsl(207,13%,45%)",
        "success": Object {
          "dark": "#6da333",
          "darker": "#60902d",
          "default": "hsl(89, 53%, 52%)",
        },
        "warning": Object {
          "dark": "#f59a24",
          "darker": "#f48f0b",
          "default": "hsl(34, 91%, 65%)",
        },
        "white": "hsl(0, 100%, 100%)",
        "whiteOpacity": [Function],
      },
    }
  }
  width="auto"
>
  <PoseGroup
    flipMove={true}
  >
    <Transition
      enterAfterExit={false}
      enterPose="enter"
      exitPose="exit"
      flipMove={true}
      preEnterPose="exit"
    />
  </PoseGroup>
</Popover>
`;
